--- a/All Code/HTML/login.html
+++ b/All Code/HTML/login.html
@@ -8,6 +8,7 @@
 <body>
 <div class="main-content">
     <form action="" method="post" name="login-form">
+
         <div class="row">
             <div class="col-1">Password</div>
             <div class="col-6">
@@ -17,7 +18,9 @@
         </div>
         <div class="row">
             <div class="col-1">Email</div>
-            <div class="col-6"><input type="email" name="email"></div>
+            <div class="col-6"><input type="email" name="email">
+                <span></span>
+            </div>
         </div>
         <div class="row">
             <div class="col-1"></div>
@@ -30,4 +33,7 @@
 </div>
 <script src="../js/login.js"></script>
 </body>
-</html>
+</html></title>
+</head>
+<body>
+
